@@ -2780,6 +2780,240 @@
             },
          ],
       },
+      {  base_value => '1000',
+         name       => 'Query Response Time',
+         hash       => 'hash_00_VER_7d8a8bb50886a021ae030ed0d4e3c7cc',
+         dt         => {
+            hash  => 'hash_01_VER_1f2509b045aeb9ac0558aa4233737f44',
+            input => 'Get MySQL Stats',
+            Query_time_hist_00 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_ebfcaa64cdaa60002b5218296daaf2b2',
+            },
+            Query_time_hist_01 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_8ebe594e9a0ca59e08bf3d60f7f4dde2',
+            },
+            Query_time_hist_02 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_2bfd3f9e5434fb2a107da232111054a6',
+            },
+            Query_time_hist_03 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_d99a98833535812b259f2a8420a5a1bc',
+            },
+            Query_time_hist_04 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_3adae7105613acd6ed1524304f910193',
+            },
+            Query_time_hist_05 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_c38a66be3f30127ec2137613ff5edebb',
+            },
+            Query_time_hist_06 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_90c30b3268ace422f88e983b73e4eca8',
+            },
+            Query_time_hist_07 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_faa45335183bdfc13f5eeecc355ddbc5',
+            },
+            Query_time_hist_08 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_2fe931f1f6ae9fac2c3d449c0e35501e',
+            },
+            Query_time_hist_09 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_b260dc170f232d80bc13b8641757ca58',
+            },
+            Query_time_hist_10 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_12c78ac507951bd96540be4e5fef83ae',
+            },
+            Query_time_hist_11 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_85365ae6ffcb35e0bed3bfaf4aeb870e',
+            },
+            Query_time_hist_12 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_e302dc5947bdebe084161a3078af9582',
+            },
+            Query_time_hist_13 => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_1f1124852774c716695c6ec96b2e3cab',
+            },
+         },
+         items => [
+            {  item => 'Query_time_hist_00',
+               color  => 'DE0056',
+               hashes => [
+                  'hash_10_VER_f91b2d6a2c8d438c050de6eff5b26d3b',
+                  'hash_10_VER_994d54efc545b35eb0bc52f0f064dc37',
+                  'hash_10_VER_2e9009a3ba100e7eecca5c3195ddb3d8',
+                  'hash_10_VER_e7f333ba6ab20d2db851ac711879ed28',
+                  'hash_10_VER_01595a9d0edda6859fe61e5ae39f2e63',
+               ],
+               task => 'hash_09_VER_203b411246409225256cd9e4c1e21347',
+               type => 'AREA',
+            },
+            {  item => 'Query_time_hist_01',
+               color  => '784890',
+               hashes => [
+                  'hash_10_VER_496f4b82d706e7ed3c60ea70382e96a7',
+                  'hash_10_VER_1514b2a11654f9e70a19dbdcafb568ad',
+                  'hash_10_VER_dc8910e2d25ba7e5c161db34a2f1ac47',
+                  'hash_10_VER_6ddbf15b0fd1d47fc8549d32ba91483f',
+                  'hash_10_VER_619e5d82fa828979d6cd34469292ffc7',
+               ],
+               task => 'hash_09_VER_011c09c13fbc6c95f41cbe5810fb0de7',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_02',
+               color  => 'D1642E',
+               hashes => [
+                  'hash_10_VER_855176920fbff0216c8c78c1e9c52112',
+                  'hash_10_VER_937cb250952a429d43e0760b7a002dae',
+                  'hash_10_VER_687041e86b715c549cb296e34c19ac12',
+                  'hash_10_VER_34584db7962aa602dac6bab9cfe64e6d',
+                  'hash_10_VER_d2867e9148f1bc9daf1cc3be467ddf88',
+               ],
+               task => 'hash_09_VER_737c1386a6a5bc14c131f6bfc5354694',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_03',
+               color  => '487860',
+               hashes => [
+                  'hash_10_VER_dacb5deffe6ad99685d8adcd1cadf21b',
+                  'hash_10_VER_401e3cf656bcfd4163518b725050eca5',
+                  'hash_10_VER_ac5c8b46ebc6257425149cde85bdae5a',
+                  'hash_10_VER_9f6a068222f8f5b1fea958e72aa27bd1',
+                  'hash_10_VER_b51b5cf69185d31e6a5bb32e2c6f7ead',
+               ],
+               task => 'hash_09_VER_a0b3e0f48b2f19094adbc08332d81fe8',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_04',
+               color  => '907890',
+               hashes => [
+                  'hash_10_VER_57c86745221cb2504025d814cd883008',
+                  'hash_10_VER_cd6f0b566859a849857c99207cb331ef',
+                  'hash_10_VER_f30f6f1b97ce4cc3996cd3bbc719a972',
+                  'hash_10_VER_0f5072118ad61c59bfd4ec68ca307ea0',
+                  'hash_10_VER_6dbd78bd8ab67122e8131681bf1c2f2a',
+               ],
+               task => 'hash_09_VER_38aa218d17dfa28eb3fe86101e39e02e',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_05',
+               color  => 'DE0056',
+               hashes => [
+                  'hash_10_VER_e1154b34378d5058b81299b9e0d247b7',
+                  'hash_10_VER_653592a4d96ce3f306341655d7ee487c',
+                  'hash_10_VER_334db9bfe10fd7a50ae0ec7308c99c72',
+                  'hash_10_VER_5189830fecca30c995f6e5ebaa1a3aed',
+                  'hash_10_VER_fce69ecae7d97eff7298da8c9f672290',
+               ],
+               task => 'hash_09_VER_4ea7085e94c95638e8bf1bb6ab689225',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_06',
+               color  => '1693A7',
+               hashes => [
+                  'hash_10_VER_46ddc0b8daa89d6cf3f3e59516e7e311',
+                  'hash_10_VER_3d24db363efafcace10dd4a6801f7af2',
+                  'hash_10_VER_8e60fe6afb1fd472a4486f85f96f9ff0',
+                  'hash_10_VER_1dd2fa837a0a495fd57ea185f27399f8',
+                  'hash_10_VER_7653216dd7597b693bbe43b12f0b89e6',
+               ],
+               task => 'hash_09_VER_cdfeda7774d826efa60577c6c5926e7e',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_07',
+               color  => '783030',
+               hashes => [
+                  'hash_10_VER_c0f96e96cdfbeadb1f41dc9fd202f9f5',
+                  'hash_10_VER_8d83e99b90671dd4201e335a989f4e0c',
+                  'hash_10_VER_f7e694782d6515207ac614a76987c8e1',
+                  'hash_10_VER_2de669e72b24cb3e8f020338fd2707a1',
+                  'hash_10_VER_d822f592d15e79eb19e82f4990638ce7',
+               ],
+               task => 'hash_09_VER_16c85be21cc038121debe6a95b221654',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_08',
+               color  => 'FF7F00',
+               hashes => [
+                  'hash_10_VER_c0e126447f515103984fe9a827267a63',
+                  'hash_10_VER_11934cc9c075f2e88427035e495e36b7',
+                  'hash_10_VER_eaae69f927913f18494c39ace7906144',
+                  'hash_10_VER_93da1ac4b6ac2c9ab9403a185b7c8abb',
+                  'hash_10_VER_d70be85f2cb8a58493b8466a42f52787',
+               ],
+               task => 'hash_09_VER_1596077c5bda999203d90cccaf70a6a0',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_09',
+               color  => '54382A',
+               hashes => [
+                  'hash_10_VER_960c6ed8b3078b53825f756da4d6f766',
+                  'hash_10_VER_3db4031346776067600290b123551f08',
+                  'hash_10_VER_b79875f0c285d35ff1fd3965f049b1c4',
+                  'hash_10_VER_98e395890f0e64ed5cddb0fa4ab94f2a',
+                  'hash_10_VER_676896e5c8ea6e11f10e1b1f5f368c48',
+               ],
+               task => 'hash_09_VER_e91bd2ae52d96a3a2feba0e277efd6f5',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_10',
+               color  => 'B83A04',
+               hashes => [
+                  'hash_10_VER_429cc07d1cf2eb5ddd512f0e00040296',
+                  'hash_10_VER_97dbff7922789a180227dd0de8327447',
+                  'hash_10_VER_87f88d2558fb9f6af0e7fc72c262a08b',
+                  'hash_10_VER_7d0bf8c626563604ae79710532912178',
+                  'hash_10_VER_cefeb6aa9a247ad85eb3ffa10a0e9047',
+               ],
+               task => 'hash_09_VER_c7ade8931484c0456586b72d49eab78c',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_11',
+               color  => '6E3803',
+               hashes => [
+                  'hash_10_VER_e1fdc8fb7c17ed13a79422f5471d35bc',
+                  'hash_10_VER_f94101b78d71f6a4e4d1c2a81e93a4dd',
+                  'hash_10_VER_640866389ef447270025867a697bb416',
+                  'hash_10_VER_c58858364782b9a9db72f2e6e643272f',
+                  'hash_10_VER_834941b58e8c9beebb34baec3a09ec60',
+               ],
+               task => 'hash_09_VER_6c0d44e7f6c483554a390401b71aa44a',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_12',
+               color  => 'B56414',
+               hashes => [
+                  'hash_10_VER_bbff3a2b0e487c9663e3f7cad1f8c27e',
+                  'hash_10_VER_425845cd3f150931e524145d455c940d',
+                  'hash_10_VER_7a2a368f2c85f3595221382ca4748ed1',
+                  'hash_10_VER_fed9e5b7ca0f3bd2347e83eea19e2391',
+                  'hash_10_VER_28ae55d1913a42c8b0697845239c0348',
+               ],
+               task => 'hash_09_VER_211f0be6280b7f83411ed93ffbd0c574',
+               type => 'STACK',
+            },
+            {  item => 'Query_time_hist_13',
+               color  => '6E645A',
+               hashes => [
+                  'hash_10_VER_52df963aa08737c80f91f1e3f88d2277',
+                  'hash_10_VER_8ec0f52620e0d7f6bd739b1f531f129f',
+                  'hash_10_VER_e4a2f1555552c6d6a1ced7529ef6f183',
+                  'hash_10_VER_2ea3f397da75b3c2cca4de9240568ab6',
+                  'hash_10_VER_cc5f87f4e0f016ec958ea922568fc689',
+               ],
+               task => 'hash_09_VER_2604580c6c7a24aedd5947bf6fdd7cca',
+               type => 'STACK',
+            },
+         ],
+      },
    ],
    inputs => {
       'Get MySQL Stats' => {
@@ -3013,6 +3247,20 @@
             key_buffer_size            => 'hash_07_VER_1a2d33907bf06696b69cb8e15115f689',
             Innodb_row_lock_waits      => 'hash_07_VER_6ba64246ba233acdff5692b25802bcf7',
             Innodb_row_lock_time       => 'hash_07_VER_aef4b672de23f6d675ea45b6fd0fd5dc',
+            Query_time_hist_00         => 'hash_07_VER_12641105511cf08d7d06673b1ab5edc7',
+            Query_time_hist_01         => 'hash_07_VER_46e4791337ea3bdfb88c200177c252db',
+            Query_time_hist_02         => 'hash_07_VER_5a9e6924558381d75d484d67d7615945',
+            Query_time_hist_03         => 'hash_07_VER_801c4b0a1018399ef9985e97aba355b5',
+            Query_time_hist_04         => 'hash_07_VER_6a0ffae58791501c91c7fdefb1dfc9a6',
+            Query_time_hist_05         => 'hash_07_VER_e553f334a0fc64919de9e3912c7a50a3',
+            Query_time_hist_06         => 'hash_07_VER_3d14aecc290d0be430122a06ac9ea38c',
+            Query_time_hist_07         => 'hash_07_VER_1fa1ef7b14b0d2153f2b2f83d2046fa3',
+            Query_time_hist_08         => 'hash_07_VER_4b931175d307d20d79a164a504e513e2',
+            Query_time_hist_09         => 'hash_07_VER_1c192f60fc3380f9539d41a78cc08ca3',
+            Query_time_hist_10         => 'hash_07_VER_95306204f6eac52daf07452bbfa18ade',
+            Query_time_hist_11         => 'hash_07_VER_190669d2b864aa1f4ac92bdb57d7f43c',
+            Query_time_hist_12         => 'hash_07_VER_60ef6d1ad1d8e3e37b680cfabf5ada3b',
+            Query_time_hist_13         => 'hash_07_VER_e8813f6fbe4fe0afaf95abacedbe61f8',
          },
          type_id => 1
       },
